Наконец-то заработал подход Structured Concurrency c preview features